# sase-core

./: AGENTS.md  Cargo.toml  README.md  release-plz.toml
.github/scripts/: check_cargo_version_edits.py
.github/workflows/: ci.yml  pr-title.yml  release-plz.yml  release.yml
crates/sase_core/: CHANGELOG.md  Cargo.toml
crates/sase_core/examples/: bench_parse.rs
crates/sase_core/src/: agent_clan_tribe.rs  agent_family.rs  agent_name_template.rs  agent_runtime.rs  commit_footer.rs  content_layout.rs  effort.rs  effort_override.rs  host_bridge.rs  lib.rs  machine_hood.rs  parser.rs  project_spec.rs  prompt_literals.rs  provider_host.rs  runner_limit_override.rs  sections.rs  suffix.rs  wire.rs  xprompt_catalog.rs
crates/sase_core/src/agent_archive/: mod.rs  wire.rs
crates/sase_core/src/agent_cleanup/: execution.rs  mod.rs  planner.rs  wire.rs
crates/sase_core/src/agent_compose/: mod.rs  wire.rs
crates/sase_core/src/agent_group_archive/: mod.rs  wire.rs
crates/sase_core/src/agent_identity/: identity.rs  mod.rs  relationships.rs
crates/sase_core/src/agent_launch/: mod.rs
crates/sase_core/src/agent_scan/: context.rs  index.rs  layout.rs  mod.rs  scanner.rs  wire.rs
crates/sase_core/src/agent_stats/: activity.rs  mod.rs  run.rs  runner.rs  wire.rs
crates/sase_core/src/artifact/: export.rs  ingest.rs  mod.rs  query.rs  store.rs  wire.rs
crates/sase_core/src/axe_chop/: bookkeeping.rs  config.rs  decision.rs  mod.rs  targets.rs  tests.rs  validation.rs  wire.rs
crates/sase_core/src/axe_status/: classify.rs  mod.rs  tests.rs  wire.rs
crates/sase_core/src/bead/: cli.rs  config.rs  events.rs  jsonl.rs  mod.rs  mutation.rs  read.rs  schema.rs  search.rs  wire.rs  work.rs
crates/sase_core/src/config/: axe.rs  merge.rs  mod.rs  plan.rs  provenance.rs  schema.rs  validate.rs  wire.rs
crates/sase_core/src/editor/: completion.rs  definition.rs  diagnostics.rs  directive.rs  file.rs  frontmatter.rs  hover.rs  mod.rs  multi_prompt.rs  placeholder.rs  token.rs  wire.rs  xprompt_args.rs
crates/sase_core/src/episode/: mod.rs  wire.rs
crates/sase_core/src/git_query/: mod.rs  parsers.rs  wire.rs
crates/sase_core/src/notifications/: mobile.rs  mod.rs  pending_actions.rs  store.rs  wire.rs
crates/sase_core/src/plan/: artifact_link.rs  frontmatter_link.rs  mod.rs  read.rs  search.rs  validate.rs  wire.rs
crates/sase_core/src/projection/: agent.rs  changespec.rs  event.rs  mod.rs  notification.rs  schema.rs  store.rs
crates/sase_core/src/projections/: agents.rs  beads.rs  catalog_indexing.rs  catalogs.rs  changespec.rs  db.rs  error.rs  event.rs  indexing.rs  maintenance.rs  migrations.rs  mod.rs  mutations.rs  notifications.rs  read.rs  rebuild.rs  replay.rs  scheduler.rs  workflows.rs
crates/sase_core/src/prompt_stash/: mod.rs  store.rs  wire.rs
crates/sase_core/src/query/: evaluator.rs  matchers.rs  mod.rs  parser.rs  searchable.rs  tests.rs  tokenizer.rs  types.rs
crates/sase_core/src/status/: constants.rs  field_updates.rs  mod.rs  name.rs  planner.rs  wire.rs
crates/sase_core/src/telemetry/: mod.rs  store.rs  wire.rs
crates/sase_core/src/vcs_log/: aggregate.rs  classify.rs  mod.rs  parsers.rs  wire.rs
crates/sase_core/tests/: agent_scan_parity.rs  bead_event_parity.rs  bead_projection_indexing.rs  bead_read_parity.rs  bead_storage_parity.rs  config_parity.rs  episode_wire_parity.rs  git_query_parity.rs  golden_corpus_parity.rs  notification_store_parity.rs  plan_validate_parity.rs  projection_phase1a.rs  projection_phase1b.rs  projection_phase1c.rs  prompt_stash_store_parity.rs  python_wire_parity.rs  query_evaluator_parity.rs  vcs_log_parity.rs
crates/sase_core/tests/fixtures/: myproj-archive.sase  myproj.gp  myproj.sase
crates/sase_core/tests/fixtures/bead/config/: current.json
crates/sase_core/tests/fixtures/bead/events/event_roundtrip/: manifest.json
crates/sase_core/tests/fixtures/bead/events/event_roundtrip/streams/: gold-1.jsonl  gold-legend.jsonl
crates/sase_core/tests/fixtures/bead/jsonl/: corrupt_lines.jsonl  current_schema.jsonl  event_roundtrip_schema.jsonl  pre_changespec_metadata_schema.jsonl  pre_is_ready_to_work_schema.jsonl
crates/sase_core/tests/fixtures/mobile/: mobile_action_result_contract.json  mobile_custom_gate_notification_contract.json  mobile_epic_notification_contract.json  mobile_notification_contract.json
crates/sase_core/tests/fixtures/notifications/: store_contract.jsonl
crates/sase_core_py/: CHANGELOG.md  Cargo.toml  PYPI_README.md  pyproject.toml
crates/sase_core_py/src/: lib.rs
crates/sase_gateway/: Cargo.toml  README.md
crates/sase_gateway/contracts/api_v1/: mobile_api_v1.json
crates/sase_gateway/contracts/local_daemon/v1/: local_daemon_v1.json
crates/sase_gateway/src/: contract.rs  daemon.rs  host_bridge.rs  indexer.rs  lib.rs  local_transport.rs  main.rs  metrics.rs  ownership.rs  projection_service.rs  provider_host_manager.rs  push.rs  routes.rs  server.rs  storage.rs  wire.rs
crates/sase_xprompt_lsp/: Cargo.toml
crates/sase_xprompt_lsp/src/: catalog_cache.rs  lib.rs  logging.rs  lsp_convert.rs  main.rs  server.rs
crates/sase_xprompt_lsp/tests/: jsonrpc_stdio.rs
