[workspace]
resolver = "2"
members = [
    "crates/sase_core",
    "crates/sase_core_py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sase-org/sase-core"
rust-version = "1.78"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"

[profile.release]
lto = "thin"
codegen-units = 1
