[workspace]
resolver = "2"
members = [
    "crates/sase_core",
    "crates/sase_core_py",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sase-org/sase-core"
rust-version = "1.78"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
fs2 = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
petgraph = "0.6"
sha2 = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1
