[package]
name = "sase_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pure-Rust core for the sase ChangeSpec wire contract."

[lib]
name = "sase_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
fs2 = { workspace = true }
rusqlite = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
tempfile = "3"

[dev-dependencies]
serde_json = { workspace = true }
