[package]
name = "sase_core_py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "PyO3 bindings for sase_core: a Python extension module exposing parse_project_bytes."
publish = false

# Phase 1D wires PyO3 into the workspace. The pure-Rust crate `sase_core`
# remains PyO3-free so later UniFFI/WASM/server work can keep reusing it.
#
# `crate-type = ["cdylib"]` is what turns this into an importable Python
# extension. The `extension-module` feature on PyO3 means the cdylib does
# NOT link against libpython directly; Python provides the symbols at
# import time. That keeps `cargo build`/`cargo check` from needing a
# Python development library on the host.

[lib]
name = "sase_core_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
sase_core = { path = "../sase_core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = { workspace = true }
