[package]
name = "sase_gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local host gateway for SASE mobile clients."

[lib]
name = "sase_gateway"
path = "src/lib.rs"

[[bin]]
name = "sase_gateway"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
