[package]
name = "sase_gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local host gateway for SASE mobile clients."

[lib]
name = "sase_gateway"
path = "src/lib.rs"

[[bin]]
name = "sase_gateway"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
