[package]
name = "sase_xprompt_lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Language server for SASE xprompt editing."

[[bin]]
name = "sase-xprompt-lsp"
path = "src/main.rs"

[dependencies]
sase_core = { path = "../sase_core" }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-lsp-server = { workspace = true }
lsp-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
